2010-04-08 Philipp Klaus Krause <pkk AT spth.de>
	* support/regression/tests/bug-2982135.c:
	  Fixed a stupid mistake.

2010-04-08 Borut Razem <borut.razem AT siol.net>

	* support/regressuin/test/bitvars.c:
	  fixed failing test on on Solaris i386 SunPro C compiler;
	  it behaves differently if -xO2 option is set or not

2010-04-07 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/ralloc.c,
	  support/regression/tests/bug-2982135.c:
	  Fixed bug #2982135.

2010-04-06 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c,
	  src/z80/peeph-z80.def
	  Minor improvements, workaround for bug #2970351.
	* device/lib/z80/divunsigned.s,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/div.s,
	  device/lib/z80/divmixed.s
	  device/lib/z80/divsigned.s:
	  Division library reorganization.

2010-04-05 Borut Razem <borut.razem AT siol.net>

	* sdcc/sim/ucsim/gui.src/Makefile.in:
	  fixed for Solaris if CURSES_PKGS is empty
	* sdcc/device/include/mcs51/at89c51snd1c.h:
	  sdcc library license changed to GPL+LE

2010-04-04 Borut Razem <borut.razem AT siol.net>

	* device/include/hc08/mc68hc908jb8.h:
	  sdcc library license changed to GPL+LE
	* sdas/linksrc/Makefile.in: Solaris make (GNU Make 3.81) doesn't like
	  $$() syntax; converted to ``

2010-04-03 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51/p89lpc933_4.h, device/include/mcs51/p89lpc935_6.h,
	  device/include/mcs51/p89v66x.h, device/include/mcs51/p89c66x.h,
	  device/include/mcs51/at89Sx051.h: sdcc library license changed to GPL+LE

2010-04-03 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c:
	  Fixed bug #2977331.

2010-04-01 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/host/spec.mk.in:
	  fixed execution of host regression tests on Mac OS X 

2010-03-28 Borut Razem <borut.razem AT siol.net>

	* device/include/ds400/ds400rom.h, device/include/asm/gbz80/features.h,
	  device/lib/z80/crt0.s, device/lib/gbz80/stubs.s,
	  device/lib/gbz80/div.s, device/lib/gbz80/fstubs.s,